<resources>
    <string name="app_name">CooKing</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="intro_activity_background">Intro Activity Background</string>
    <string name="intro_text">Let\'s\nGet\nCooKing</string>
    <string name="intro_button_text">Get Started</string>
    <string name="login_background_image">login background image</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="meta_icon">meta icon</string>
    <string name="google_icon">google icon</string>
    <string name="login_text">Log In</string>
    <string name="signup_text">Sign Up</string>
    <string name="logo_text">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="choose_text">Choose</string>
    <string name="add_text">Add</string>
    <string name="search_text">Search</string>
    <string name="profile_text">Profile</string>
    <string name="favorite_text">Favorite</string>
    <string name="choose_Title_Text_1">What\'s in Your Kitchen?</string>
    <string name="choose_Title_Text_2">Enter Ingredients</string>
    <string name="ingredient_icon_text">Ingredient Icon</string>
    <string name="dummy_text">Text</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_title_1_text">Delicious</string>
    <string name="search_title_2_text">Easy to cook menu</string>
    <string name="search_category_title_text">Category</string>
    <string name="search_popular_title_text">Popular</string>
    <string name="recipe_image_desc">Recipe image</string>
    <string name="recipe_favorite_icon_desc">Recipe Favorite Icon</string>
    <string name="rating_star_icon_desc">Rating Star icon</string>
    <string name="favorite_title_text_1">Favorites</string>
    <string name="favorite_title_text_2">Your kitchen your choice</string>
    <string name="account_image_text">Account Image</string>
    <string name="account_management_text">Account Management</string>
    <string name="settings_text">Settings</string>
    <string name="language_text">Language</string>
    <string name="faq_text">FAQ</string>
    <string name="about_us_text">About Us</string>
    <string name="logout_text">Logout</string>
    <string name="ingredients">Ingredients</string>
    <string name="start_cooking_text">Start!</string>
</resources>