<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_choose"
        android:icon="@drawable/ic_compass"
        android:title="@string/choose_text" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_text" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_text" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_heart_outline"
        android:title="@string/favorite_text" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile_text" />
</menu>