<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.CooKing.FullscreenContainer"
    tools:context=".IntroActivity">

    <ImageView
        android:id="@+id/introBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/intro_activity_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/introbackground" />

    <Button
        android:id="@+id/introButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7CC52A2B"
        android:fontFamily="@font/poppins_semibold"
        android:paddingLeft="50dp"
        android:paddingTop="15dp"
        android:paddingRight="50dp"
        android:paddingBottom="15dp"
        android:text="@string/intro_button_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/intro_text"
        android:textColor="#1E344C"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />


</androidx.constraintlayout.widget.ConstraintLayout>