<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginbackground"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/logo_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/login_modal"
        android:elevation="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/loginMaterialCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#002B9B3C"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/loginTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabGravity="fill"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorColor="#B02B9B3C"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorGravity="stretch"
                app:tabMode="fixed"
                app:tabRippleColor="#00FFFFFF">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/loginTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/signupTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_text" />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/loginViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginMaterialCard"
            app:layout_constraintVertical_bias="0.0">

        </androidx.viewpager2.widget.ViewPager2>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/google_icon"
            android:elevation="35dp"
            android:focusable="true"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginViewPager"
            app:srcCompat="@drawable/ic_google"
            app:tint="@null"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/meta_icon"
            android:elevation="35dp"
            android:focusable="true"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabGoogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginViewPager"
            app:srcCompat="@drawable/ic_meta"
            app:tint="@null"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/twitter_icon"
            android:elevation="35dp"
            android:focusable="true"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fabGoogle"
            app:layout_constraintTop_toBottomOf="@id/loginViewPager"
            app:srcCompat="@drawable/ic_twitter"
            app:tint="@null"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>