<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".16"
        app:layout_constraintWidth_percent=".8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C0558D74"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingTop="12dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPassLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmailLayout"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent=".8"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C0558D74"
            android:fontFamily="@font/poppins"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingTop="12dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgotPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_password_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loginPassLayout"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassLayout"
        app:layout_constraintVertical_bias="0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="200dp"
        android:backgroundTint="#7CC52A2B"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassText"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintWidth_percent=".6" />

</androidx.constraintlayout.widget.ConstraintLayout>