<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".12"
        app:layout_constraintWidth_percent=".8" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C0558D74"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingTop="12dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupPassLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupEmailLayout"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent=".8" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupPassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C0558D74"
            android:fontFamily="@font/poppins"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingTop="12dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupConfirmPassLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupPassLayout"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent=".8" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupConfirmPassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C0558D74"
            android:fontFamily="@font/poppins"
            android:hint="@string/confirm_password_text"
            android:inputType="textPassword"
            android:paddingTop="12dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#7CC52A2B"
        android:fontFamily="@font/poppins_semibold"
        android:minHeight="48dp"
        android:paddingStart="0dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:text="@string/signup_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupConfirmPassLayout"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintWidth_percent=".6" />

</androidx.constraintlayout.widget.ConstraintLayout>